@@ -67,6 +67,8 @@ verify_logging(va_list args)
   if (Logging.use_logging)
     reopen_log(ServicesState.logfile);
 
+  db_reopen_log();
+
   return pass_callback(hverify);
 }
 
